--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,11 +21,12 @@ requirements:
     - setuptools
   run:
     - python >={{ python_min }}
-    - astropy-base >=5,<6
+    - astropy-base >=5,<7
     - filelock >=3,<4
-    - frictionless >=5.10.1,<6
+    - frictionless >=5.8.3,<6
+    - iteration_utilities >=0.13.0,<0.14.0
     - matplotlib-base >=3.5.0,<4
-    - pandas >=2,<3
+    - pandas >=1.3,<3
     - plotly >=5,<6
     - pybtex >=0.24,<0.25
 
