--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,6 +22,8 @@ requirements:
   run:
     - python >={{ python_min }}
     - astropy-base >=5,<8
+    - clevercsv >=0.7.0,<0.9.0
+    - click >=8,<9
     - frictionless >=5.8.3,<6
     - matplotlib-base >=3.5.0,<4
     - pandas >=1.3,<3
